test/suite/semantic_errors/duplicate_function/src/redundant.ral
function main(): void
end

function main(): void
end
